--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sklad</title>
+    <title>Best DnD site ever</title>
 </head>
 <body>
     <header>
-        <h1>Календарь</h1>
+        <img src="https://static.wikia.nocookie.net/drebedenboi/images/6/65/Download.jpg/revision/latest/scale-to-width-down/305?cb=20210802083915&path-prefix=ru">
     </header>
     
 </body>
