--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +14,18 @@
 </head>
 <body>
     <header>
-        <img src="https://static.wikia.nocookie.net/drebedenboi/images/6/65/Download.jpg/revision/latest/scale-to-width-down/305?cb=20210802083915&path-prefix=ru">
+        
+        <div id="menu">
+            <table  class="menu-column">
+                <td class="menu-column"><img id="logo" src="https://www.pngkey.com/png/full/141-1413410_d-d-logo-png-dungeons-and-dragons-icon.png"></td>
+                <td class="menu-column">Меню</td>
+                <td class="menu-column">Карты</td>
+                <td class="menu-column">Магазин</td>
+                <td class="menu-column">Регистрация</td>
+                <td class="menu-column">Персонажи</td>
+                <td class="menu-column">Поддержка</td>
+            </table>
+        </div>
     </header>
     
 </body>
